clang/test/BSC/Negative/Parser/detect_eof/detect_eof_union_2.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

// The next line is not a typo. `enum` does not crash while `num` crashes after the compiler makes a correction to `enum`
int a = (num // expected-error {{use of undeclared identifier 'num'; did you mean 'enum'}}
// expected-error@-1 {{expected expression}}
// expected-error@-2 {{expected ';' after top level declarator}}